--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,12 @@
 {
-  "Lua.diagnostics.globals": ["love", "fennel", "_W", "_center"],
+  "Lua.diagnostics.globals": [
+    "love",
+    "fennel",
+    "_W",
+    "_center",
+    "vector",
+    "timer"
+  ],
   "Lua.runtime.version": "Lua 5.1",
   "Lua.workspace.ignoreDir": ["lib/*"]
 }
