--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,8 @@
     "_center",
     "vector",
     "timer",
-    "_Gstate"
+    "_Gstate",
+    "tprint"
   ],
   "Lua.runtime.version": "Lua 5.1",
   "Lua.workspace.ignoreDir": ["lib/*"]
